[gd_scene load_steps=12 format=3 uid="uid://dct6crx3jwiat"]

[ext_resource type="Script" uid="uid://nchnj2u7kv5" path="res://src/Scripts/Player.gd" id="1_rpqav"]
[ext_resource type="Resource" uid="uid://chtuv7ka5xakl" path="res://src/Scripts/Player_resources/player_health.tres" id="2_4mdpm"]
[ext_resource type="Resource" uid="uid://ddtmr3nr11bf1" path="res://src/Scripts/Player_resources/player_speed.tres" id="2_8fvgu"]
[ext_resource type="Script" uid="uid://dsi0c4pqhkju7" path="res://src/Scripts/PlayerCombat.gd" id="3_g1uh0"]
[ext_resource type="PackedScene" uid="uid://be1gwv0coi2ua" path="res://src/Scenes/WeaponInstance.tscn" id="4_5dq0m"]
[ext_resource type="PackedScene" uid="uid://c6box3bvo8g64" path="res://src/Scenes/PauseMenu.tscn" id="6_4mdpm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qbkls"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5dq0m"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qm7rr"]

[sub_resource type="BoxMesh" id="BoxMesh_qbkls"]

[sub_resource type="BoxMesh" id="BoxMesh_rpqav"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 3
script = ExtResource("1_rpqav")
speed_component = ExtResource("2_8fvgu")
health_component = ExtResource("2_4mdpm")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_qbkls")

[node name="ThirdPersonCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8591207, 0.511773, 0, -0.511773, 0.8591207, 0, 2.7003121, 2.2092881)

[node name="FirstPersonCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4769659, 0.088204324)

[node name="HurtBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
shape = SubResource("CapsuleShape3D_5dq0m")
debug_color = Color(0.972549, 0, 0, 0.41960785)

[node name="PlayerBody" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qm7rr")

[node name="Hands" type="Node3D" parent="PlayerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.39501464, 0.4332748)
script = ExtResource("3_g1uh0")

[node name="RightHand" type="Node3D" parent="PlayerBody/Hands"]
transform = Transform3D(0.9999997, 0, 0, 0, 1, 0, 0, 0, 0.9999997, 0, 0, 0)

[node name="RightWeapon" parent="PlayerBody/Hands/RightHand" instance=ExtResource("4_5dq0m")]
transform = Transform3D(0.9999999, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0.43993986, 0, -0.8960203)

[node name="RHandMesh" type="MeshInstance3D" parent="PlayerBody/Hands/RightHand"]
transform = Transform3D(0.25, 0, 0, 0, 0.123000026, 0, 0, 0, 0.64300007, 0.435, 0, -0.712)
mesh = SubResource("BoxMesh_qbkls")
skeleton = NodePath("../..")

[node name="LeftHand" type="Node3D" parent="PlayerBody/Hands"]
transform = Transform3D(0.9999997, 0, 0, 0, 1, 0, 0, 0, 0.9999997, 0, 0, 0)

[node name="LeftWeapon" parent="PlayerBody/Hands/LeftHand" instance=ExtResource("4_5dq0m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.44, 0, -0.896)

[node name="LHandMesh" type="MeshInstance3D" parent="PlayerBody/Hands/LeftHand"]
transform = Transform3D(0.248, 0, 0, 0, 0.124000005, 0, 0, 0, 0.584, -0.435, 0, -0.712)
mesh = SubResource("BoxMesh_rpqav")
skeleton = NodePath("../..")

[node name="PauseMenu2" parent="." instance=ExtResource("6_4mdpm")]
offset_left = 393.0
offset_top = 65.0
offset_right = 433.0
offset_bottom = 105.0
